--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -11,6 +11,7 @@
 	
 	"uploader-fontname": "Web font", 
 	"uploader-updatename": "TilBuci update ZIP file", 
+	"uploader-mediazip": "Compressed media files", 
 	"uploader-picturename": "Picture files", 
 	"uploader-spritemapname": "PNG picture files", 
 	"uploader-moviename": "Exported movie ZIP file", 
@@ -457,6 +458,7 @@
 	"menu-scene-new": "New", 
 	"menu-scene-open": "Open", 
 	"menu-scene-properties": "Properties", 
+	"menu-scene-dflow": "Decision flow", 
 	"menu-scene-save": "Save", 
 	"menu-scene-saveas": "Save as", 
 	"menu-scene-publish": "Publish", 
@@ -641,6 +643,18 @@
 	"window-sceneversion-error": "The versions list could not be open. Please try again.", 
 	"window-sceneversion-button": "Open the selected version", 
 	
+	"window-scenedflow-title": "Decision flow",
+	"window-scenedflow-choice1": "First choice", 
+	"window-scenedflow-choice2": "Second choice", 
+	"window-scenedflow-choice3": "Third choice", 
+	"window-scenedflow-choice4": "Fourth choice", 
+	"window-scenedflow-choicetext": "Button text", 
+	"window-scenedflow-choicescene": "Scene to load", 
+	"window-scenedflow-set": "Set scene decision flow", 
+	"window-scenedflow-nolist": "Error while loadign teh scenes list.", 
+	"window-scenedflow-none": "None", 
+	"window-scenedflow-sceneset": "Scene decision flow set.", 
+	
 	"window-scenesaveas-title": "Save scene as",
 	"window-scenesaveas-name": "Scene new name", 
 	"window-scenesaveas-id": "Scene new ID (leave blank for automatic)", 
@@ -705,11 +719,12 @@
 	"menu-contraptions-forms": "Input Forms", 
 	"menu-contraptions-interfaces": "Interfaces", 
 	"menu-contraptions-targets": "Targets", 
+	"menu-contraptions-messages": "Messages", 
 	
 	"menu-narrative-title": "Narrative", 
 	"menu-narrative-characters": "Characters", 
 	"menu-narrative-dialogues": "Dialogues", 
-	"menu-narrative-dtree": "Decision tree", 
+	"menu-narrative-dflow": "Decision flow", 
 	
 	"window-kfmanage-title": "Scene keyframes",
 	"window-kfmanage-keyframes": "Keyframes",
@@ -780,6 +795,28 @@
 	"window-contrmenu-ersave1": "Your access level doesn't allow setting the menu layouts.",
 	"window-contrmenu-oksave": "The menu layouts were saved.",
 	
+	"window-contrmess-title": "Messages layouts",
+	"window-contrmess-registered": "Registered message layouts", 
+	"window-contrmess-load": "Load layout",
+	"window-contrmess-remove": "Remove layout",
+	"window-contrmess-name": "Layout name",
+	"window-contrmess-add": "Add/update message layout",
+	"window-contrmess-properties": "Message layout properties",
+	"window-contrmess-font": "Text font",
+	"window-contrmess-fontc": "Font color",
+	"window-contrmess-fontsize": "Font size",
+	"window-contrmess-gap": "Layout gap", 
+	"window-contrmess-imgbg": "Background image",
+	"window-contrmess-imgbt0": "First button image",
+	"window-contrmess-imgbt1": "Second button image (optional)",
+	"window-contrmess-imgbt2": "Third button image (optional)",
+	"window-contrmess-save": "Save current messages layout settings",
+	"window-contrmess-nographics": "You must set the images for the background and for the first button.",
+	"window-contrmess-noname": "You must give the message layout a name with at least 3 characters.",
+	"window-contrmess-ersave": "Error while saving the messages layouts. Please try again.",
+	"window-contrmess-ersave1": "Your access level doesn't allow setting the messages layouts.",
+	"window-contrmess-oksave": "The messages layouts were saved.",
+	
 	"window-contrcover-title": "Content covers",
 	"window-contrcover-registered": "Registered content covers",
 	"window-contrcover-load": "Load cover",
@@ -814,6 +851,38 @@
 	"window-narrchar-ersave1": "Your access level doesn't allow setting the characters information.",
 	"window-narrchar-oksave": "The characters information was saved.",
 	"window-narrchar-nolist": "Error while loading the media collections information.",
+	
+	"window-narrdflow-title": "Decision flow", 
+	"window-narrdflow-settings": "Display settings", 
+	"window-narrdflow-flow": "Scenes flow", 
+	"window-narrdflow-setabout": "Use the following form to adjust the display of the navigation buttons.", 
+	"window-narrdflow-button": "Button graphic", 
+	"window-narrdflow-position": "Display position", 
+	"window-narrdflow-top": "top", 
+	"window-narrdflow-topleft": "top left", 
+	"window-narrdflow-topright": "top right", 
+	"window-narrdflow-center": "center", 
+	"window-narrdflow-centerleft": "center left", 
+	"window-narrdflow-centerright": "center right", 
+	"window-narrdflow-bottom": "bottom", 
+	"window-narrdflow-bottomleft": "bottom left", 
+	"window-narrdflow-bottomright": "bottom right", 
+	"window-narrdflow-gap": "Distance gap", 
+	"window-narrdflow-btset": "Set decision flow display", 
+	"window-narrdflow-nobutton": "You must set the graphic for the button.", 
+	"window-narrdflow-errorset": "Error whiel setting the display properties. Please try again.", 
+	"window-narrdflow-font": "Font", 
+	"window-narrdflow-fontsize": "Font size", 
+	"window-narrdflow-fontc": "Font color", 
+	"window-narrdflow-ersave": "Error while saving the decision flow settings. Please try again.",
+	"window-narrdflow-ersave1": "Your access level doesn't allow setting the decision flow information.",
+	"window-narrdflow-oksave": "The decision flow setting was saved.",
+	"window-narrdflow-nolist": "Erro whiel getting the scenes decision flow information.", 
+	"window-narrdflow-scenes": "Scenes with decision flow set", 
+	"window-narrdflow-options": "Options for selected scene", 
+	"window-narrdflow-loadscene": "Load selected scene", 
+	"window-narrdflow-loadoption": "Load selected option scene", 
+	"window-narrdflow-nooption": "No scenes with decision flow set found.", 
 	
 	"window-narrdiag-title": "Dialogues",
 	"window-narrdiag-folders": "Groups",
@@ -1148,7 +1217,8 @@
 	"window-media-addast": "Add as new asset",
 	"window-media-addsingle": "Select file",
 	"window-media-addstageer": "Error while adding the media to the stage.",
-	"window-media-upload": "Upload a file",
+	"window-media-upload": "Upload a single file",
+	"window-media-uploadzip": "Upload a compressed ZIP file",
 	"window-media-download": "Download selected file",
 	"window-media-uploader": "Error while uploading the file. Please try again.",
 	"window-media-uplevel": "Up one level",
@@ -1555,6 +1625,12 @@
 	"acinfo-showmenu-p5": "x distance from border or position", 
 	"acinfo-showmenu-p6": "y distance from border or position", 
 	"acinfo-hidemenu": "hide menus", 
+	"acinfo-showmessage": "show a message", 
+	"acinfo-showmessage-p1": "message layout name", 
+	"acinfo-showmessage-p2": "message text", 
+	"acinfo-showmessage-p3": "message buttons (3 max, split by ;)", 
+	"acinfo-showmessage-p4": "integer variable to receive clicked button number", 
+	"acinfo-hidemessage": "hide message", 
 	"acinfo-showcover": "show content cover",
 	"acinfo-showcover-p1": "content cover name", 	
 	"acinfo-hidecover": "hide content covers",
