--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -46,13 +46,35 @@
 	"rightbar-media": "Current instance", 
 	"rightbar-action": "Actions", 
 	
-	"rightbar-instances-none": "Select none", 
+	"rightbar-instances-none": "select none", 
+	"rightbar-instances-all": "select all", 
 	"rightbar-instances-rand": "Randomize names", 
 	"rightbar-instances-randcheck": "Are you sure you want to randomize all current instance names? If there is a selected instance, its name won't be changed.", 
-	
+	"rightbar-instances-noinstances": "no instances selected", 
+	"rightbar-instances-copy": "copy instance", 
+	"rightbar-instances-nocopied": "no copied instances", 
+	"rightbar-instances-paste": "paste copied instances", 
+	"rightbar-instances-stageleft": "move left (stage)", 
+	"rightbar-instances-stagecenter": "move center (stage)", 
+	"rightbar-instances-stageright": "move right (stage)", 
+	"rightbar-instances-stagetop": "move top (stage)", 
+	"rightbar-instances-stagemiddle": "move middle (stage)", 
+	"rightbar-instances-stagebottom": "move bottom (stage)", 
+	"rightbar-instances-selectionleft": "move left (selection)", 
+	"rightbar-instances-selectioncenter": "move center (selection)", 
+	"rightbar-instances-selectionright": "move right (selection)", 
+	"rightbar-instances-selectiontop": "move top (selection)", 
+	"rightbar-instances-selectionmiddle": "move middle (selection)", 
+	"rightbar-instances-selectionbottom": "move bottom (selection)", 
 	"rightbar-action-trigger": "Trigger actions", 
 	"rightbar-action-over": "Mouse over actions", 
 	"rightbar-action-timed": "Timed actions", 
+	"rightbar-instances-disth": "distribute horizontally", 
+	"rightbar-instances-distv": "distribute vertically",
+	"rightbar-instances-xpos": "x",	
+	"rightbar-instances-xsize": "width",
+	"rightbar-instances-ypos": "y",	
+	"rightbar-instances-ysize": "height",	
 	
 	"rightbar-history-original": "original",
 	"rightbar-history-instance": "instance properties",
@@ -378,6 +400,8 @@
 	"window-movieprop-input-swipetop": "Touchscreen swipe from top", 
 	"window-movieprop-input-swipebottom": "Touchscreen swipe from bottom", 
 	"window-movieprop-input-touchhold": "Touch and hold (more than 1 second)", 
+	"window-movieprop-input-pinchopen": "Touchscreen pinch open (zoom in)", 
+	"window-movieprop-input-pinchclose": "Touchscreen pinch close (zoom out)", 
 	"window-movieprop-input-keyhome": "Keyboard home", 
 	"window-movieprop-input-keyend": "Keyboard end", 
 	"window-movieprop-input-mousemiddle": "Mouse middle button click", 
@@ -1069,7 +1093,7 @@
 	"menu-media-text": "Text", 
 	"menu-media-video": "Video", 
 	"menu-media-embed": "HTML5 Embed", 
-	"menu-media-strings": "String files", 
+	"menu-media-strings": "String and array files", 
 	
 	"menu-exhange-title": "Exchange data", 
 	"menu-exchange-export": "Export current movie", 
@@ -1207,7 +1231,7 @@
 	"window-media-openfolder": "Open folder",
 	"window-media-addstage": "Add to the stage",
 	"window-media-addcolast": "Add to collection",
-	"window-media-addtocol": "Add to collection and stage",
+	"window-media-addtocol": "Add to collection & stage",
 	"window-media-colname": "Collection:", 
 	"window-media-closeafter": "close after adding",
 	"window-media-addedcol": "New asset created.",
@@ -1230,6 +1254,8 @@
 	"window-media-removedirer": "Error while removing the folder. Is it empty?", 
 	"window-media-removefileer": "Error while removing the file.", 
 	"window-media-removewarn": "Are you sure you want to remove the selected item?", 
+	"window-media-multiple": "multiple selection", 
+	"window-media-nomultiple": "Media collection creation doesn't support multiple selection.", 
 	
 	"window-collectionadd-title": "Add from media collection",
 	"window-collection-title": "Manage scene collections",
@@ -1300,7 +1326,7 @@
 	
 	"window-mdpicture-title": "Picture manager",
 	
-	"window-mdstrings-title": "String files",
+	"window-mdstrings-title": "String and array files",
 	
 	"window-mdspritemap-title": "Spritemap manager",
 	"window-mdspritemap-loaderror": "Error while loading the spritemap file.", 
@@ -1583,6 +1609,8 @@
 	"acblock-success": "on success", 
 	"acblock-error": "on error", 
 	"acblock-select": "when selected", 
+	"acblock-complete": "when completed", 
+	"acblock-or": "or", 
 	"acblock-button": "Set action block", 
 	"acblock-valcopy": "Retrieved value", 
 	"acblock-errortitle": "Action block setting", 
@@ -1615,6 +1643,8 @@
 	"acinfo-runloaddata-p1": "variables file name",
 	"acinfo-runifdataexist": "does a variables data file exist?", 
 	"acinfo-runifdataexist-p1": "variables file name",
+	"acinfo-startkiosk": "start kiosk mode", 
+	"acinfo-endkiosk": "end kiosk mode", 
 	
 	"window-acbcontraptions-title": "Contraptions", 
 	"acinfo-showmenu": "show menu", 
@@ -1703,6 +1733,7 @@
 	"acinfo-scenelastkf": "load the last scene keyframe",
 	"acinfo-sceneloadkf": "load a keyframe", 
 	"acinfo-sceneloadkf-p1": "the keyframe number to load", 
+	"acinfo-scenehistoryback": "load the previous scene", 
 	
 	"window-acbbool-title": "Boolean values actions and conditions", 
 	"acinfo-ifbool": "compare two boolean values", 
@@ -1718,6 +1749,87 @@
 	"acinfo-boolset-p2": "value to set", 
 	"acinfo-boolsetinverse": "invert a boolean variable value",
 	"acinfo-boolsetinverse-p1": "variable name",
+	
+	"window-acbarray-title": "Array manipulation", 
+	"acinfo-arrayload": "load an array file", 
+	"acinfo-arrayload-p1": "the array file name (just name, without .json extension)", 
+	"acinfo-arraycreate": "create an empty array", 
+	"acinfo-arraycreate-p1": "the array name", 
+	"acinfo-arrayremove": "remove an array", 
+	"acinfo-arrayremove-p1": "the array name", 
+	"acinfo-arraypush": "push data into an array", 
+	"acinfo-arraypush-p1": "the array name", 
+	"acinfo-arraypush-p2": "the data (string)", 
+	"acinfo-arrayset": "set the data of an array index", 
+	"acinfo-arrayset-p1": "the array name", 
+	"acinfo-arrayset-p2": "the array index", 
+	"acinfo-arrayset-p3": "the data (string)", 
+	"acinfo-arrayget": "get the string data of an array index", 
+	"acinfo-arrayget-p1": "the array name", 
+	"acinfo-arrayget-p2": "the array index", 
+	"acinfo-arrayget-p3": "string variable to receive the value", 
+	"acinfo-arraygetint": "get the int data of an array index", 
+	"acinfo-arraygetint-p1": "the array name", 
+	"acinfo-arraygetint-p2": "the array index", 
+	"acinfo-arraygetint-p3": "int variable to receive the value", 
+	"acinfo-arraygetfloat": "get the float data of an array index", 
+	"acinfo-arraygetfloat-p1": "the array name", 
+	"acinfo-arraygetfloat-p2": "the array index", 
+	"acinfo-arraygetfloat-p3": "float variable to receive the value", 
+	"acinfo-arraygetbool": "get the bool data of an array index", 
+	"acinfo-arraygetbool-p1": "the array name", 
+	"acinfo-arraygetbool-p2": "the array index", 
+	"acinfo-arraygetbool-p3": "bool variable to receive the value", 
+	"acinfo-arrayclear": "clear an array", 
+	"acinfo-arrayclear-p1": "the array name", 
+	"acinfo-arraycurrent": "get string data from current array index", 
+	"acinfo-arraycurrent-p1": "the array name", 
+	"acinfo-arraycurrent-p2": "the string variable name to receive the value",
+	"acinfo-arraynext": "get string data from next array index", 
+	"acinfo-arraynext-p1": "the array name", 
+	"acinfo-arraynext-p2": "the string variable name to receive the value",
+	"acinfo-arrayprevious": "get string data from previous array index", 
+	"acinfo-arrayprevious-p1": "the array name", 
+	"acinfo-arrayprevious-p2": "the string variable name to receive the value",
+	"acinfo-arraycurrentfloat": "get float data from current array index", 
+	"acinfo-arraycurrentfloat-p1": "the array name", 
+	"acinfo-arraycurrentfloat-p2": "the float variable name to receive the value",
+	"acinfo-arraynextfloat": "get float data from next array index", 
+	"acinfo-arraynextfloat-p1": "the array name", 
+	"acinfo-arraynextfloat-p2": "the float variable name to receive the value",
+	"acinfo-arraypreviousfloat": "get float data from previous array index", 
+	"acinfo-arraypreviousfloat-p1": "the array name", 
+	"acinfo-arraypreviousfloat-p2": "the float variable name to receive the value",
+	"acinfo-arraycurrentint": "get int data from current array index", 
+	"acinfo-arraycurrentint-p1": "the array name", 
+	"acinfo-arraycurrentint-p2": "the int variable name to receive the value",
+	"acinfo-arraynextint": "get int data from next array index", 
+	"acinfo-arraynextint-p1": "the array name", 
+	"acinfo-arraynextint-p2": "the int variable name to receive the value",
+	"acinfo-arraypreviousint": "get int data from previous array index", 
+	"acinfo-arraypreviousint-p1": "the array name", 
+	"acinfo-arraypreviousint-p2": "the int variable name to receive the value",
+	"acinfo-arraycurrentbool": "get bool data from current array index", 
+	"acinfo-arraycurrentbool-p1": "the array name", 
+	"acinfo-arraycurrentbool-p2": "the bool variable name to receive the value",
+	"acinfo-arraynextbool": "get bool data from next array index", 
+	"acinfo-arraynextbool-p1": "the array name", 
+	"acinfo-arraynextbool-p2": "the bool variable name to receive the value",
+	"acinfo-arraypreviousbool": "get bool data from previous array index", 
+	"acinfo-arraypreviousbool-p1": "the array name", 
+	"acinfo-arraypreviousbool-p2": "the bool variable name to receive the value",
+	"acinfo-arraysetindex": "set the current array index", 
+	"acinfo-arraysetindex-p1": "the array name", 
+	"acinfo-arraysetindex-p2": "the new index position",
+	"acinfo-arraygetindex": "get the current array index", 
+	"acinfo-arraygetindex-p1": "the array name", 
+	"acinfo-arraygetindex-p2": "the int variable name to receive the value",
+	"acinfo-arraytostring": "get the array contents as a string", 
+	"acinfo-arraytostring-p1": "the array name", 
+	"acinfo-arraytostring-p2": "the string variable name to receive the text",
+	"acinfo-arrayfromstring": "set the array contents from a string", 
+	"acinfo-arrayfromstring-p1": "the array name", 
+	"acinfo-arrayfromstring-p2": "the string variable name to load data from",
 	
 	"window-acbint-title": "Integer values actions and conditions", 
 	"acinfo-ifintsdifferent": "check if two int values are different", 
@@ -2120,6 +2232,35 @@
     "acinfo-instancecleary-p1": "the instance name",
 	"acinfo-instanceclearall": "clear all instance set properties",
     "acinfo-instanceclearall-p1": "the instance name",
+	"acinfo-instancemorezoom": "increase instance zoom", 
+	"acinfo-instancemorezoom-p1": "the instance name",
+	"acinfo-instancemorezoom-p2": "zoom increase (%)",
+	"acinfo-instancelesszoom": "decrease instance zoom", 
+	"acinfo-instancelesszoom-p1": "the instance name",
+	"acinfo-instancelesszoom-p2": "zoom decrease (%)",
+	"acinfo-instanceclearzoom": "return instance to original size and position", 
+	"acinfo-instanceclearzoom-p1": "the instance name",
+	"acinfo-instancemoveup": "move instance up", 
+	"acinfo-instancemoveup-p1": "the instance name",
+	"acinfo-instancemoveup-p2": "amount to move",
+	"acinfo-instancemovedown": "move instance down", 
+	"acinfo-instancemovedown-p1": "the instance name",
+	"acinfo-instancemovedown-p2": "amount to move",
+	"acinfo-instancemoveleft": "move instance left", 
+	"acinfo-instancemoveleft-p1": "the instance name",
+	"acinfo-instancemoveleft-p2": "amount to move",
+	"acinfo-instancemoveright": "move instance right", 
+	"acinfo-instancemoveright-p1": "the instance name",
+	"acinfo-instancemoveright-p2": "amount to move",
+	"acinfo-instanceclearmove": "return instance to original position", 
+	"acinfo-instanceclearmove-p1": "the instance name",
+	"acinfo-instancestartdrag": "start dragging instance", 
+	"acinfo-instancestartdrag-p1": "the instance name",
+	"acinfo-instancestopdrag": "stop any instance dragging",
+	"acinfo-instanceisoverlapping": "check if two instances are overlapping", 
+	"acinfo-instanceisoverlapping-p1": "first instance",
+	"acinfo-instanceisoverlapping-p2": "second instance",
+	
 	
 	"window-acbreplace-title": "Replace data actions and conditions", 
 	"acinfo-replaceclearfile": "remove a file name/path replacement",
@@ -2163,6 +2304,8 @@
 	"acinfo-systemifmobile": "check if running on mobile app export runtime",
 	"acinfo-systemifpublish": "check if running on publish services export runtime",
 	"acinfo-systemifplayer": "check if running on TilBuci player",
+	"acinfo-systemcalljs": "call a custom javascript method",
+    "acinfo-systemcalljs-p1": "the javascript method name",
 	
 	"acinfo-systemsendevent": "send a custom event to player listeners",
     "acinfo-systemsendevent-p1": "event parameter (you may add more)",
