--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -749,6 +749,8 @@
 	"menu-narrative-characters": "Characters", 
 	"menu-narrative-dialogues": "Dialogues", 
 	"menu-narrative-dflow": "Decision flow", 
+	"menu-narrative-inventory": "Inventory", 
+	"menu-narrative-battle": "Battle system", 
 	
 	"window-kfmanage-title": "Scene keyframes",
 	"window-kfmanage-keyframes": "Keyframes",
@@ -907,6 +909,43 @@
 	"window-narrdflow-loadscene": "Load selected scene", 
 	"window-narrdflow-loadoption": "Load selected option scene", 
 	"window-narrdflow-nooption": "No scenes with decision flow set found.", 
+	
+	"window-narrinv-title": "Inventory setup", 
+	"window-narrinv-settings": "Display settings", 
+	"window-narrinv-setabout": "Use the following form to adjust and display the inventory.", 
+	"window-narrinv-imgbgh": "Horizontal display background picture", 
+	"window-narrinv-imgbgv": "Vertical display background picture", 
+	"window-narrinv-button": "Picture for the button to close the inventory (displayed in the top right)", 
+	"window-narrinv-font": "Font", 
+	"window-narrinv-fontsize": "Font size", 
+	"window-narrinv-fontc": "Font color", 
+	"window-narrinv-btset": "Set inventory display", 
+	"window-narrinv-items": "Available items", 
+	"window-narrinv-loaditem": "Load selected item", 
+	"window-narrinv-removeitem": "Remove selected item", 
+	"window-narrinv-itname": "Item ID", 
+	"window-narrinv-ittype": "Item type", 
+	"window-narrinv-ittypec": "consumable", 
+	"window-narrinv-ittypek": "key", 
+	"window-narrinv-itgraphic": "item picture (square format)", 
+	"window-narrinv-itaction": "Item activation actions", 
+	"window-narrinv-saveitem": "Set item",
+	"window-narrinv-saveinventory": "Save inventory items",
+	"window-narrinv-titleitem": "Inventory item", 
+	"window-narrinv-itemno": "You must provide the name and he picture for the item to be set.", 
+	"window-narrinv-ersave": "Error while saving the inventory items. Please try again.",
+	"window-narrinv-ersave1": "Your access level doesn't allow setting the inventory items.",
+	"window-narrinv-oksave": "The inventory items list was saved.",
+	"window-narrinv-noclose": "The close inventory button graphis must be set.", 
+	"window-narrinv-nobg": "You must set at least one of the background images, either horizontal or vertical.", 
+	"window-narrinv-errorset": "Error whiel setting the display properties. Please try again.", 
+	"window-narrinv-ersaveset": "Error while saving the inventory display settings. Please try again.",
+	"window-narrinv-ersave1set": "Your access level doesn't allow setting the inventory display settings.",
+	"window-narrinv-oksaveset": "The inventory deisplay settings was saved.",
+	"window-narrinv-mode": "Inventory mode", 
+	"window-narrinv-modeall": "key and consumable items", 
+	"window-narrinv-modeconsumable": "only ocnsumable items", 
+	"window-narrinv-modek": "only key items", 
 	
 	"window-narrdiag-title": "Dialogues",
 	"window-narrdiag-folders": "Groups",
@@ -1632,6 +1671,23 @@
 	"acinfo-diaglast": "show the last dialogue text line", 
 	"acinfo-diagfirst": "show the first dialogue text line", 
 	"acinfo-diagclose": "closes the current dialogue", 
+	"acinfo-invshow": "show inventory", 
+	"acinfo-invclose": "close inventory", 
+	"acinfo-invaddkey": "add a key item to inventory", 
+	"acinfo-invaddkey-p1": "the item ID", 
+	"acinfo-invremkey": "remove a key item from inventory", 
+	"acinfo-invremkey-p1": "the item ID", 
+	"acinfo-invclearkey": "remove all key items from inventory", 
+	"acinfo-invhaskey": "in a key item on inventory?", 
+	"acinfo-invhaskey-p1": "the item ID", 
+	"acinfo-invaddcons": "add a consumable item to inventory", 
+	"acinfo-invaddcons-p1": "the item ID", 
+	"acinfo-invaddcons-p2": "the amount to add", 
+	"acinfo-invremcons": "remove a consumable item to inventory", 
+	"acinfo-invremcons-p1": "the item ID", 
+	"acinfo-invconsume": "consume an inventory item", 
+	"acinfo-invconsume-p1": "the item ID", 
+	"acinfo-invclearcons": "remove all consumable inventory items", 
 	
 	"window-acbruntime-title": "Runtime", 
 	"acinfo-runinstall": "install as an application", 
