--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -750,7 +750,7 @@
 	"menu-narrative-dialogues": "Dialogues", 
 	"menu-narrative-dflow": "Decision flow", 
 	"menu-narrative-inventory": "Inventory", 
-	"menu-narrative-battle": "Battle system", 
+	"menu-narrative-battle": "Battle card system", 
 	
 	"window-kfmanage-title": "Scene keyframes",
 	"window-kfmanage-keyframes": "Keyframes",
@@ -938,14 +938,59 @@
 	"window-narrinv-oksave": "The inventory items list was saved.",
 	"window-narrinv-noclose": "The close inventory button graphis must be set.", 
 	"window-narrinv-nobg": "You must set at least one of the background images, either horizontal or vertical.", 
-	"window-narrinv-errorset": "Error whiel setting the display properties. Please try again.", 
+	"window-narrinv-errorset": "Error while setting the display properties. Please try again.", 
 	"window-narrinv-ersaveset": "Error while saving the inventory display settings. Please try again.",
 	"window-narrinv-ersave1set": "Your access level doesn't allow setting the inventory display settings.",
-	"window-narrinv-oksaveset": "The inventory deisplay settings was saved.",
+	"window-narrinv-oksaveset": "The inventory display settings were saved.",
 	"window-narrinv-mode": "Inventory mode", 
 	"window-narrinv-modeall": "key and consumable items", 
 	"window-narrinv-modeconsumable": "only ocnsumable items", 
 	"window-narrinv-modek": "only key items", 
+	
+	"window-narrbattle-title": "Battle card system setup", 
+	"window-narrbattle-display": "Display settings", 
+	"window-narrbattle-setabout": "Use the following form to adjust the battle card display.", 
+	"window-narrbattle-imgattr": "Background image for attribute area", 
+	"window-narrbattle-imgbgh": "Horizontal display background picture", 
+	"window-narrbattle-imgbgv": "Vertical display background picture", 
+	"window-narrbattle-button": "Picture for the button to close the battle (displayed in the top right)", 
+	"window-narrbattle-font": "Font", 
+	"window-narrbattle-fontsize": "Font size", 
+	"window-narrbattle-fontc": "Font color", 
+	"window-narrbattle-btset": "Set battle card system display", 
+	"window-narrbattle-attributes": "Card attributes", 
+	"window-narrbattle-attrabout": "You can set names for up to 5 attributes to be used in the battle card system.",
+	"window-narrbattle-attr1": "First card attribute", 
+	"window-narrbattle-attr2": "Second card attribute", 
+	"window-narrbattle-attr3": "Third card attribute", 
+	"window-narrbattle-attr4": "Fourth card attribute", 
+	"window-narrbattle-attr5": "Fifth card attribute", 
+	"window-narrbattle-btattr": "Set card attribute names",
+	"window-narrbattle-noattributes": "You must provide the name for at least one attribute.", 
+	"window-narrbattle-noclose": "You must set the close and attribute background graphics.", 
+	"window-narrbattle-nobg": "You must set at least one of the background images, either horizontal or vertical.", 
+	"window-narrbattle-errorset": "Error while setting the display properties. Please try again.", 
+	"window-narrbattle-oksaveset": "The battle card settings were saved.",
+	"window-narrbattle-ersaveset": "Error while saving the battle card settings. Please try again.",
+	"window-narrbattle-ersave1set": "Your access level doesn't allow change the battle card settings.",
+	"window-narrbattle-cards": "Cards", 
+	"window-narrbattle-available": "Available cards", 
+	"window-narrbattle-loadcards": "Load selected card", 
+	"window-narrbattle-removecard": "Remove selected card", 
+	"window-narrbattle-cardname": "Card ID", 
+	"window-narrbattle-cardgraphic": "Card picture (square format)", 
+	"window-narrbattle-cardat1": "First attribute value", 
+	"window-narrbattle-cardat2": "Second attribute value", 
+	"window-narrbattle-cardat3": "Third attribute value", 
+	"window-narrbattle-cardat4": "Fourth attribute value", 
+	"window-narrbattle-cardat5": "Fifty attribute value", 
+	"window-narrbattle-cardno": "You must provide the card ID and its graphic.", 
+	"window-narrbattle-ersave": "Error while saving the battle cards. Please try again.",
+	"window-narrbattle-ersave1": "Your access level doesn't allow setting the battle cards.",
+	"window-narrbattle-oksave": "The battle cards list was saved.",
+	"window-narrbattle-setcard": "Set battle card", 
+	"window-narrbattle-savecards": "Save battle cards", 
+	
 	
 	"window-narrdiag-title": "Dialogues",
 	"window-narrdiag-folders": "Groups",
@@ -1688,6 +1733,18 @@
 	"acinfo-invconsume": "consume an inventory item", 
 	"acinfo-invconsume-p1": "the item ID", 
 	"acinfo-invclearcons": "remove all consumable inventory items", 
+	"acinfo-invtostring": "save current inventory to a string variable", 
+	"acinfo-invtostring-p1": "the string variable to save to", 
+	"acinfo-invfromstring": "load inventory from a string variable", 
+	"acinfo-invfromstring-p1": "the string variable to load from", 
+	"acinfo-invtostringk": "save current key items to a string variable", 
+	"acinfo-invtostringk-p1": "the string variable to save to", 
+	"acinfo-invfromstringk": "load key itemns from a string variable", 
+	"acinfo-invfromstringk-p1": "the string variable to load from", 
+	"acinfo-invtostringc": "save current consumable items to a string variable", 
+	"acinfo-invtostringc-p1": "the string variable to save to", 
+	"acinfo-invfromstringc": "load consumable items from a string variable", 
+	"acinfo-invfromstringc-p1": "the string variable to load from", 
 	
 	"window-acbruntime-title": "Runtime", 
 	"acinfo-runinstall": "install as an application", 
