--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -950,7 +950,8 @@
 	"window-narrbattle-title": "Battle card system setup", 
 	"window-narrbattle-display": "Display settings", 
 	"window-narrbattle-setabout": "Use the following form to adjust the battle card display.", 
-	"window-narrbattle-imgattr": "Background image for attribute area", 
+	"window-narrbattle-imgattr": "Background picture for attribute button", 
+	"window-narrbattle-card": "Background picture for card", 
 	"window-narrbattle-imgbgh": "Horizontal display background picture", 
 	"window-narrbattle-imgbgv": "Vertical display background picture", 
 	"window-narrbattle-button": "Picture for the button to close the battle (displayed in the top right)", 
@@ -967,7 +968,7 @@
 	"window-narrbattle-attr5": "Fifth card attribute", 
 	"window-narrbattle-btattr": "Set card attribute names",
 	"window-narrbattle-noattributes": "You must provide the name for at least one attribute.", 
-	"window-narrbattle-noclose": "You must set the close and attribute background graphics.", 
+	"window-narrbattle-noclose": "You must set the close, attribute and card background graphics.", 
 	"window-narrbattle-nobg": "You must set at least one of the background images, either horizontal or vertical.", 
 	"window-narrbattle-errorset": "Error while setting the display properties. Please try again.", 
 	"window-narrbattle-oksaveset": "The battle card settings were saved.",
